--- a/assets/css/mycss.css
+++ b/assets/css/mycss.css
@@ -33,3 +33,13 @@ footer, header, hgroup, menu, nav, section {
         border-radius: 100px;
         width: 75px;
     }
+
+	#three .main.style2s.tiledBackground {
+		background-image: url(https://www.mozilla.org/media/img/logos/firefox/logo-quantum.9c5e96634f92.png);
+		background-size: 150px;
+		width: 300px;
+		height: 300px;
+		border: 2px solid;
+		color: pink;
+	  }
+	  
