--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2121,7 +2121,7 @@ input, select, textarea {
 
 		select option {
 			color: #555;
-			background: #fff;
+			background: #ff0000;
 		}
 
 		select:focus::-ms-value {
@@ -2819,12 +2819,11 @@ input, select, textarea {
 	}
 
 		.main.style1 {
-			background: #fff;
+			background: white;
+			background-size: cover;
 		}
 
 		.main.style2 {
-			background-color: #333;
-			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
 			background-image: url("images/overlay1.png"), url("../../images/header.jpg");
 			background-size: auto,							cover;
@@ -2916,10 +2915,10 @@ input, select, textarea {
 		padding: 9em 0 9em 0 ;
 		background-color: #4686a0;
 		color: rgba(255, 255, 255, 0.75);
-		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("../../images/Background.jpg"); width: 100%;
-		background-position: top left,						center center,					center center;
-		background-size: auto,							cover,							cover;
+		background-image: url("../../images/Background.jpg"); height: 745px;
+		background-position: center center,						center center,					center center;
+		background-size: cover,							cover,							cover;
+		background-repeat: no-repeat;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
