--- a/assets/css/mycss.css
+++ b/assets/css/mycss.css
@@ -23,7 +23,7 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: middle;}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -38,6 +38,8 @@ footer, header, hgroup, menu, nav, section {
 		background-image: url(../../images/pic01.jpg);
 		background-size: cover;
 	}
+
+	
 
 
 	
